# Tiny_llm

./: CMakeLists.txt  LICENSE  README  README.md
benchmarks/: run_benchmark.cpp
examples/: alignment_check.cpp  run_model.cpp  test_kv_cache.cpp  test_quantization.cpp
include/: attention.h  ffn.h  layernorm.h  linear.h  linear_int8.h  model.h  profiler.h  tensor.h  transformer_block.h  utils.h  weight_loader.h
python/: export_weights.py  generate_reference.py  reference_outputs.txt  test_mode.py  tiny_transformer.py
src/: attention.cpp  ffn.cpp  layernorm.cpp  linear.cpp  linear_int8.cpp  main.cpp  model.cpp  profiler.cpp  tensor.cpp  transformer_block.cpp  utils.cpp  weight_loader.cpp
